added swagger UI and sqlite
